--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,43 +1,51 @@
 .header-container {
-  /* height: 77px; */
+  height: 77px;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 3000;
-  width: 100%;
+  width: 101.5%;
   background-image: linear-gradient(to left, #247dbe, #71bcf1);
 }
 
+.site-header {
+  background-image: linear-gradient(to left, #247dbe, #71bcf1);
+  width: 100%;
+  padding: 0 0 0 0 !important;
+}
+
 .header-padding {
-  padding: 20px 25px;
+  padding-top: 17px;
+  padding-bottom: 12px;
 }
 
-.flex-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-/* Base for all header buttons */
-.header-btn {
-  border: none!important;
-  outline: none !important;
-  height: 37px;
-  padding: 5 10;
+.mx-2-5 {
   margin: 0 0.8rem;
-  border-radius: 5px;
-  transition: all 0.4s;
 }
 
-/* Base for the middle navigation buttons */
-.header-nav-btn {
+.header-right {
+  padding-right: 20px;
+  text-align: right;
+}
+
+.header-left {
+  padding-left: 25px;
+  text-align: left;
+}
+
+.header-button-base {
+  border-radius: 5px !important;
+  font-weight: 500;
+  border: none !important;
+  outline: none !important;
+
+  height: 36px;
   padding-right: 10px;
   padding-left: 10px;
   z-index: 99 !important;
   color: #ffffff !important;
 }
 
-/* To control state for the middle nav buttons */
 .btn-nav {
   background: linear-gradient(135deg, #a9d3f1, #82beec);
   box-shadow: 5px 5px 15px #338ac9, -5px -5px 15px #9ed1fa;
@@ -58,16 +66,14 @@
 }
 
 .btn-nav-target {
-  background: linear-gradient(-135deg, #84c2ee, #57a2db);
-  box-shadow: inset 2px 2px 10px #338ac9, inset -2px -2px 10px #9ed1fa;
-
+  background: linear-gradient(135deg, #a9d3f1, #82beec);
+  box-shadow: 5px 5px 15px #338ac9, -5px -5px 15px #9ed1fa;
   transition: all 0.3s;
 }
 
 .btn-nav-active {
-  background: linear-gradient(-135deg, #8dcfff, #62b7f8);
-  box-shadow: inset 2px 2px 10px #338ac9, inset -2px -2px 10px #9ed1fa;
-
+  background: linear-gradient(135deg, #a9d3f1, #82beec);
+  box-shadow: 5px 5px 15px #338ac9, -5px -5px 15px #9ed1fa;
   transition: all 0.3s;
 }
 
@@ -83,12 +89,14 @@
   transition: all 0.3s;
 }
 
-/* For the logo button */
 .btn-logo {
   height: 36px;
   width: 150px;
+  border: none;
   background-image: url("../media/branding/logo.png");
   background-size: cover;
+  transition: all 0.4s;
+  margin-right: 40px;
 }
 
 .btn-logo:hover {
@@ -127,7 +135,7 @@
 .top-btn-img-home {
   height: 20px;
   width: auto;
-  opacity: 1;
+  opacity: 0.8;
 }
 
 .menu-drop-enter {
@@ -239,12 +247,17 @@
 }
 
 .map-icon {
-  height: 100%;
+  height: 33px;
   width: auto;
   filter: contrast(120%) saturate(140%);
 }
 
 .map-button {
+  height: auto !important;
+  padding-top: 5px;
+  padding-bottom: 4px;
+  margin-right: 40px;
+
   background: linear-gradient(135deg, #a9d3f1, #82beec);
   box-shadow: 5px 5px 15px #338ac9, -5px -5px 15px #9ed1fa;
   transition: all 0.3s;
