--- a/src/styles/customInteriors/index.css
+++ b/src/styles/customInteriors/index.css
@@ -10,3 +10,13 @@
     font-size: 16px;
     font-family: "Roboto", sans-serif;
 }
+
+.navsection {
+    height: 2px;
+    width: 100%;
+    right: 0px;
+    background: #c05252;
+    opacity: 0;
+    position: absolute;
+    top: -80px;
+}
